k8s/prod/moki.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moki-deployment
  labels:
    app: moki
  namespace: tekst-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moki
  template:
    metadata:
      labels:
        app: moki
    spec:
      containers:
        - name: moki
          image: <image>
          ports:
            - name: app-port
              containerPort: 4200
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /moki/api/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /moki/api/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 1

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moki-ingress
  namespace: tekst-prod
spec:
  ingressClassName: nginx
  rules:
    - host: <host_url>
      http:
        paths:
          - path: /moki
            pathType: Prefix
            backend:
              service:
                name: moki-service
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: moki-service
spec:
  ports:
    - port: 4200
      name: gui
      targetPort: 80
  selector:
    app: moki
  type: ClusterIP
